--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,251 @@
-html,
 body {
-  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+
+  font-family: -apple-system, BlinkMacSystemFont, "Source Code Pro", monospace,
+    "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+    "Droid Sans", "Helvetica Neue", sans-serif;
+  background-color: #000800;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+body::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+body::-webkit-scrollbar-thumb {
+  background: #0bd30e;
+}
+body::-webkit-scrollbar-track {
+  background: #000800;
+}
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
 
 * {
-  box-sizing: border-box;
+  margin: 0px;
+}
+a {
+  color: white;
+  text-decoration: none;
+}
+
+.particles {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.App {
+  display: flex;
+  flex-direction: column;
+}
+
+.about {
+  max-width: 100%;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  background: linear-gradient(
+    180deg,
+    rgba(11, 211, 14, 0.5),
+    rgba(11, 211, 14, 0)
+  );
+  padding: 4em;
+}
+.button {
+  margin: 1em 0;
+}
+
+.hire_button {
+  padding: 1em 2em;
+  color: white;
+  background: rgba(11, 211, 14, 0);
+  border: 1px solid rgba(11, 211, 14, 0.5);
+  transition: 0.2s;
+  font-size: 1em;
+  cursor: pointer;
+}
+
+.hire_button:hover {
+  background: rgba(11, 211, 14, 0.5);
+  border-radius: 1em;
+}
+
+.profile_body {
+  margin-top: 20px;
+}
+
+.profile_image {
+  border-radius: 50%;
+  border: 4px double white;
+  margin-bottom: 10px;
+  width: 200px;
+}
+
+.profile_title {
+  font-size: 2rem;
+  line-height: 1;
+  letter-spacing: 1px;
+  border-bottom: 2px solid white;
+}
+
+.profile_position {
+  text-transform: uppercase;
+  font-size: 0.8rem;
+  letter-spacing: 3px;
+  margin-top: 20px;
+}
+
+@media (min-width: 600px) {
+  .about {
+    flex-direction: row;
+    align-items: center;
+    text-align: left;
+  }
+  .profile_detail {
+    margin-left: 2em;
+  }
+  .profile_title::after {
+    margin: 0;
+  }
+}
+
+.nav {
+  color: white;
+  font-size: 2.2vw;
+  display: flex;
+  justify-content: center;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 10;
+  background: #000800;
+}
+
+@media screen and (min-width: 600px) {
+  .nav {
+    font-size: 15px;
+  }
+}
+
+.nav_list_item {
+  cursor: pointer;
+  padding: 1em 2em;
+  transition: 0.5s;
+}
+.nav_list_item:hover {
+  background-color: #0bd30e;
+  color: #000800;
+}
+
+.progress {
+  display: flex;
+  transition: all 0.2s ease;
+  flex-direction: column;
+  width: 45%;
+  margin-left: 2.5%;
+  padding-left: 2.5%;
+  padding-bottom: 2.5%;
+}
+.progressHovered {
+  background-color: rgba(11, 211, 14, 0.5);
+}
+
+.progress_container {
+  height: 10px;
+  width: 90%;
+  border: 1px solid white;
+  display: flex;
+  align-items: center;
+}
+
+.progress_filler {
+  height: 60%;
+  text-align: left;
+  padding-left: 8px;
+  background-color: #0bd30e;
+  transition: 0.5s;
+}
+
+.progress_label {
+  padding: 5;
+  color: white;
+  font-weight: bold;
+  margin: 1em 0;
+
+  transition: 0.5s;
+}
+
+.progress:hover {
+  background-color: rgba(11, 211, 14, 0.5);
+}
+
+.progress:hover .progress_filler {
+  background-color: white;
+}
+
+.projects {
+  padding-top: 2em;
+  background-color: rgba(11, 211, 14, 0.5);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  height: 40em;
+}
+
+.box {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  align-items: center;
+  height: 180px;
+  width: 10em;
+  margin: 2em 0;
+  min-width: 10em;
+  border-radius: 2.5em;
+  background-color: #000800;
+  box-shadow: -1rem 0 3rem black;
+  transition: 0.2s ease-in-out;
+  cursor: pointer;
+}
+
+.box:hover {
+  transform: translateY(-1rem);
+  height: 350px;
+}
+.box_image {
+  width: 10em;
+  height: 10em;
+  border-radius: 2.5em;
+}
+
+.content {
+  position: relative;
+  text-align: center;
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.2s ease-in-out;
+  margin: 0 10px;
+}
+
+.projects .box:hover .content {
+  visibility: visible;
+  opacity: 1;
+  margin-top: 1em;
+  transition-delay: 0.1s;
+}
+
+.skills {
+  background-color: #000800;
+  display: flex;
+  flex-wrap: wrap;
+  height: 20%;
+  padding: 2.6em 0;
 }
